<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2019 The Monyhar Authors. All rights reserved.
     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file. -->
<org.monyhar.chrome.browser.tasks.tab_management.TabGridIphDialogView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/iph_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true">
    <ImageView
        android:id="@+id/animation_drawable"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/iph_drag_and_drop_animated_drawable"
        android:contentDescription="@string/iph_drag_and_drop_content" />
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/iph_drag_and_drop_title"
        android:textAppearance="@style/TextAppearance.Headline.Primary" />
    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/iph_drag_and_drop_content"
        android:textAppearance="@style/TextAppearance.TextMedium.Primary"
        android:gravity="start" />
</org.monyhar.chrome.browser.tasks.tab_management.TabGridIphDialogView>
