<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2019 The Monyhar Authors. All rights reserved.
     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file. -->
<org.monyhar.chrome.browser.tasks.tab_management.MessageCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tab_grid_message_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/message_card_background_with_inset">
    <org.monyhar.ui.widget.ChromeImageView
        android:id="@+id/icon"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:minWidth="8dp"
        android:adjustViewBounds="true"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/ic_globe_24dp"/>
    <org.monyhar.components.browser_ui.widget.text.TemplatePreservingTextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"
        android:layout_weight="4"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.TextMedium.Primary" />
    <org.monyhar.ui.widget.ButtonCompat
        android:id="@+id/action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextButton"
        android:layout_gravity="center"/>
    <org.monyhar.ui.widget.ChromeImageView
        android:id="@+id/close_button"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        style="@style/BottomToolbarButton"
        android:contentDescription="@string/close"
        android:tint="@color/default_icon_color" />
</org.monyhar.chrome.browser.tasks.tab_management.MessageCardView>
