<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2019 The Monyhar Authors. All rights reserved.
     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file. -->


<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<org.monyhar.chrome.browser.compositor.CompositorViewHolder
            android:id="@+id/compositor_view_holder"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
</merge>
